# industry_weekly

./: .gitignore  Dockerfile  README.md  api_server.py  firestore_service.py  fmp_client.py  main.py  pyproject.toml  report_generator.py  requirements.txt  scheduler.py  sp500_sector.py  start.sh
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  Navbar.css  Navbar.tsx  PeRatioBar.css  PeRatioBar.tsx  ReportPage.css  ReportPage.tsx
output/: 2025-10-09_Basic_Materials_report.md  2025-10-09_Communication_Services_report.md  2025-10-09_Consumer_Cyclical_report.md
prompts/: report_stage1.txt  report_stage2.txt  summarize_for_preview.txt
tests/: test_report_generator.py
